components/Header.module.css
.header {
    background: var(--color-muted);
    box-shadow: var(--shadow);
    display: flex;
    align-items: center;
    -webkit-user-select: none;
    user-select: none;
    width: 100vw;
    justify-content: space-between;
    height: 72px;
    border-bottom: var(--outline);
    z-index: 10;
    position: relative;
    text-shadow: 1px 1px 7px #00000026;
    color: white;

    > * {
        flex-grow: 1;
    }
}

.burgerMenu {
    padding: 15px;
}

.left {
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 100%;

    > * {
        padding: 15px;
    }

    span {
        color: white;
    }

    .item {
        display: flex;
        align-items: center;
        gap: 7px;
        text-decoration: none;
        height: 100%;
        
        span {
            position: relative;
        }

        span::after {
            content: "";
            position: absolute;
            left: 0;
            bottom: -4px;
            height: 2px;
            width: 0%;
            background: white;
            /* ou um gradiente se quiser */
            transition: width 0.3s ease;
        }
    }
    .item:hover {
        span::after {
            width: 100%;
        }
    }

    #premium {
        span {
            background: linear-gradient(90deg, rgba(0, 255, 225, 1) 18%, rgba(72, 232, 72, 1) 84%);
            -webkit-background-clip: text;
            -webkit-text-fill-color: transparent;
            background-clip: text;
            position: relative;
            display: inline-block;
        }
        span::after {
            background: linear-gradient(90deg, rgba(0, 255, 225, 1) 18%, rgba(72, 232, 72, 1) 84%);
        }
    }
}

.centerTitle {
    font-family: 'Dogica Pixel', Arial, Helvetica, sans-serif;
    justify-self: center;
    justify-content: center;
}

.right {
    margin-left: auto;
    gap: 7px;
    width: min-content;
    margin: 0px;
    overflow: hidden;
    display: flex;
    height: 100%;
    justify-content: flex-end;
    
    > * {
        padding: 15px;
    }

    .loggedUser {
        display: flex;
        align-items: center;
        justify-content: space-between;
        cursor: pointer;
        gap: 10px;

        .userName {
            font-weight: 500;
            color: #ffffff;
            /* width: 0px; */
            max-width: min-content;
            text-overflow: ellipsis;
            white-space: nowrap;
            position: relative;
        }
        .userName::after {
            content: "";
            position: absolute;
            left: 0;
            bottom: -4px;
            height: 2px;
            width: 0%;
            background: white;
            /* ou um gradiente se quiser */
            transition: width 0.3s ease;
        }

        img {
            width: 40px;
            height: 40px;
            border-radius: 50%;
            object-fit: cover;
            border: var(--outline);
        }

        a {
            display: flex;
            align-items: center;
        }
    }
    .loggedUser:hover .userName::after {
        width: 100%;
    }

    div[data-tippy-root] {
        padding: 0;
    }
}

.tippy_menu {
    background: var(--frosted-glass);
    backdrop-filter: var(--frosted-glass-blur);
    border-radius: 10px;
    -webkit-user-select: none;
    user-select: none;
    cursor: pointer;
    transition: var(--smooth-transition);
    overflow: hidden;
    box-shadow: var(--shadow);

    .item {
        padding: 10px;
        border-radius: 0px;
        background-color: rgba(255, 255, 255, 0);
        transition: var(--smooth-transition);
        color: var(--color-text);
        display: flex;
        justify-content: space-between;
        flex-grow: 1;

        span {
            color: var(--color-text);
        }
    }
    .item:hover {
        background-color: rgb(228, 228, 228);
    }

    .item.redstyle:hover {
        background-color: red;
        color: white;

        span {
            color: white;
        }
    }

    .item.bluestyle:hover {
        background-color: rgb(53, 164, 255);
        color: white;

        span {
            color: white;
        }
    }
}

@media (max-width: 500px) {
    .header {
        padding: 1rem .5rem;
    }
}

@media (max-width: 350px) {
    .left {
        gap: 12px;
    }
}

